---------------------------------------------------------------------------------------------------
Version: 2.1.24
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.1.23
Date: 2025-01-19
  Bugfixes:
    - Fix crash on migration when adding mod to an existing game.
    - Change spawn cleanup nearby bases safety check to use "minimum_distance_to_existing_chunks" distance to avoid wiping a nearby buddy's base.
  Modding:
    - Add a hidden setting to allow disabling solo spawns. (Not exposed in the GUI.)
---------------------------------------------------------------------------------------------------
Version: 2.1.22
Date: 2025-01-14
  Bugfixes:
    - Make sure secondary spawns don't trigger on surfaces where they are disabled!
    - Add support for surfaces that don't have autoplace_controls in their map gen settings.
    - Caught a few cases where oarc-mod-on-config-changed event was not being triggered.
  Modding:
    - Add buddy_spawn_distance_offset to allow adjusting the distance between buddy spawns. (Hidden config.)
    - Add remove_or_reset_player remote interface.
---------------------------------------------------------------------------------------------------
Version: 2.1.21
Date: 2024-12-31
  Bugfixes:
    - Actually fix crash when buddy is now an ex, when generating a secondary spawn.
---------------------------------------------------------------------------------------------------
Version: 2.1.20
Date: 2024-12-30
  Changes:
    - Change settings import/export to use serpent block instead of a single line. This should make it easier to read and edit the settings.
    - Add a customizable section to the server info tab (not editable via GUI for now, only via remote interface, custom scenario or importing custom settings).
  Bugfixes:
    - Fix crash when buddy no longer exists when generating a secondary spawn.