@@ -418,6 +418,14 @@ script.on_event(defines.events.on_entity_damaged, function(event)
 end,
 {{filter="type", type = "unit-spawner"}})
 
+-- Notify player if their crash-site spaceship is dead, only for PVP
+script.on_event(defines.events.on_entity_died, function(event)
+    if storage.ocfg.gameplay.enable_friendly_teams then return end
+    local force = event.entity.force ---@type LuaForce
+    CompatSend(force, "[color=red]Warning:[/color] Your crashed ship was destroyed!")
+end,
+{{filter = "name", name = "crash-site-spaceship"}})
+
 ----------------------------------------
 -- Gui Events
 ----------------------------------------
